# dune-alugrid

./: .cvsignore  .gitignore  .gitlab-ci.yml  .todo  AUTHORS  CHANGELOG.md  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE.md  Makefile.am  README  README.autogen  README.dist  README.md  TODO  addauthors.sh  alugrid.pc.in  autogen.sh  config.h.cmake  configure.ac  dune-alugrid.pc.in  dune.module  gcc.opts  ibm.opts  icc.opts  lastVersion  mpi.opts
dune/alugrid/: CMakeLists.txt  Makefile.am  dgf.hh  grid.hh  pickle.hh
dune/alugrid/2d/: Makefile.am  alu2dgridfactory.cc  alu2dgridfactory.hh  alu2dinclude.hh  alugrid.hh  bndprojection.hh  capabilities.hh  datahandle.hh  entity.hh  entity_imp.cc  entityseed.hh  geometry.hh  geometry_imp.cc  grid.hh  grid_imp.cc  gridfactory.cc  gridfactory.hh  indexsets.hh  intersection.cc  intersection.hh  intersection_imp.cc  iterator.hh  iterator_imp.cc
dune/alugrid/3d/: CMakeLists.txt  Makefile.am  alu3dgridfactory.cc  alu3dgridfactory.hh  alu3dinclude.hh  alu3diterators.hh  alugrid.hh  capabilities.hh  communication.hh  datahandle.hh  entity.hh  entity_imp.cc  entity_inline.hh  (+23 more)
examples/: .gitignore  CMakeLists.txt  Makefile.am  TESTS  adaptation.hh  aluball.cc  alugrid.cfg  callbackadaptation.hh  check-adaptation.sh  check-communication.sh  cube3d.dgf.3  cube3d.dgf.3.0  cube3d.dgf.3.1  cube3d.dgf.3.2  datamap.hh  diagnostics.hh  fvscheme.hh  lbdatahandle.hh  main.cc  mhdfluxes.hh  paralleldgf.hh  piecewisefunction.hh  problem-ball.hh  problem-euler.hh  problem-transport.hh  problem.hh  reconstruct.hh  unitcube3d.dgf
examples/backuprestore/: CMakeLists.txt  Makefile.am  main.cc  sionlib.hh
examples/ball/: adaptation.hh  ballscheme.hh  datamap.hh  main.cc  problem-ball.hh  problem.hh
examples/callback/: CMakeLists.txt  Makefile.am  adaptation.hh  alugrid.cfg  check-adaptation.sh  diagnostics.hh  main.cc  paralleldgf.hh  piecewisefunction.hh  problem-euler.hh  problem-transport.hh  problem.hh
examples/communication/: CMakeLists.txt  Makefile.am  callback_adaptation.hh  check-communication.sh  fvscheme.hh  main.cc
examples/dgf/: cube_hc_32768.dgf  cube_hc_4096.dgf  cube_hc_512.dgf  tet.0.msh.dgf  tet.1.msh.dgf  tet.2.msh.dgf  tet.3.msh.dgf  tet.4.msh.dgf  tet.5.msh.dgf  tet.6.msh.dgf  tetgen.dgf  tetmsh.dgf  unitcube3d.dgf
examples/fv/: Makefile.am  adaptation.hh  alugrid.cfg  datamap.hh  diagnostics.hh  fvscheme.hh  lbdatahandle.hh  main.cc  p1function.hh  piecewisefunction.hh  problem-ball.hh  problem-euler.hh  problem-transport.hh  problem.hh  reconstruct.hh
examples/loadbalance/: CMakeLists.txt  Makefile.am  adaptation.hh  alugrid.cfg  loadbalance.hh  loadbalance_inline.hh  loadbalance_simple.hh  loadbalance_zoltan.hh  main.cc
examples/loadbalancing/: Makefile.am  adaptation.hh  alugrid.cfg  datamap.hh  loadbalance.cc  loadbalance.hh  loadbalance_inline.hh  main.cc  partition.cc  writedgf.hh
examples/quality/: .main.cc.swp  .problem-globalrefine.hh.swp  CMakeLists.txt  dataScript.sh  estimate-closure.cc  main.cc  problem-globalrefine.hh  tetSequenceStudy.sh
examples/testEfficiency/: CMakeLists.txt  Makefile.am  adaptation.hh  check-efficiency.sh  main.cc
examples/zoltan/: adaptation.hh  loadbalance.hh  main.cc  unitcube3d.dgf  zoltaninterface.hh
lib/: CMakeLists.txt  Makefile.am
misc/examples/: .cvsignore  2.tetra  Makefile.am  adapt.cc  backuprestore.cc  cube.tetra  example.cc  examplepara.cc  howmuch.cc  loadlb.cc  periodic.cc  sizes.cc  timer.hh  twist.cc
src/: .cvsignore  .gitignore  Makefile.am  Makefile.am.include  alu3dgrid_parallel.cc  alu3dgrid_parallel.h  alu3dgrid_serial.cc  alu3dgrid_serial.h  alugrid_2d.cc  alugrid_2d.h  alugrid_parallel.cc  alugrid_parallel.h  alugrid_serial.cc  alugrid_serial.h  double.h  dummyindexstack.hh  ghostelements.h  gitter_dune_impl.cc  gitter_dune_impl.h  gitter_dune_pll_impl.cc  gitter_dune_pll_impl.h  gitter_dune_pll_mgb.cc  gitter_geo.cc  gitter_hexa_top.h  gitter_hexa_top.hh  gitter_hexa_top_pll.h  gitter_impl.h  gitter_impl.hh  gitter_mgb.cc  gitter_mgb.h  gitter_mgb.hh  gitter_pll_idn.cc  gitter_pll_impl.cc  gitter_pll_impl.h  gitter_pll_ldb.cc  gitter_pll_ldb.h  gitter_pll_mgb.cc  gitter_pll_mgb.h  gitter_pll_sti.cc  gitter_pll_sti.h  (+40 more)
src/alu2d/: Makefile.am  Makefile.am.include  grid.cc  grid.h  grid_imp.cc  handle.cc  handle.h  hdlrw.cc  includeall.hh  indexstack2d.h  listwalk.h  main2d.cc  mknbrs.cc  stlheaders.h  triang.cc  triang.git  triang.h  vmmap.cc  vmmap.h  vtx_btree.cc  vtx_btree.h  vtxprojection.h  xdisplay.cc  xdisplay.h  xdisplay_imp.hh
src/duneinterface/: Makefile.am  Makefile.am.include  gitter_dune_impl.cc  gitter_dune_impl.h  gitter_dune_pll_impl.cc  gitter_dune_pll_impl.h  gitter_dune_pll_mgb.cc
src/parallel/: Makefile.am  Makefile.am.include  alugrid_defineparallel.h  alumetis.hh  aluparmetis.hh  aluparty_lib.hh  alusfc.hh  ghost_elements.h  ghostelements.h  gitter_hexa_top_pll.cc  gitter_hexa_top_pll.h  gitter_pll_idn.cc  gitter_pll_impl.cc  gitter_pll_impl.h  gitter_pll_ldb.cc  gitter_pll_ldb.h  gitter_pll_mgb.cc  gitter_pll_mgb.h  gitter_pll_sti.cc  gitter_pll_sti.h  gitter_tetra_top_pll.cc  gitter_tetra_top_pll.h  metis.c  metis.h  mpAccess.cc  mpAccess.h  mpAccess_MPI.cc  mpAccess_MPI.h  mpAccess_STAR.cc  mpAccess_STAR.h  parmetis.c  parmetis.h  party_lib.c  party_lib.h
src/serial/: Makefile.am  Makefile.am.include  alugrid_defineparallel.h  dlmalloc.c  elementif.h  ghost_elements.cc  ghost_elements.h  ghost_info.cc  ghost_info.h  gitter_geo.cc  gitter_hexa_top.cc  gitter_hexa_top.h  gitter_impl.cc  gitter_impl.h  gitter_mgb.cc  gitter_mgb.h  gitter_sti.cc  gitter_sti.h  gitter_tetra_top.cc  gitter_tetra_top.h  headers.h  indexstack.h  lock.h  mapp_cube_3d.cc  mapp_cube_3d.h  mapp_tetra_3d.cc  mapp_tetra_3d.h  mapp_tetra_3d_ext.h  myalloc.cc  myalloc.h  parallel.h  refinementrules.h  serialize.h  walk.h  xdrclass.h
utils/bisection-compatibility/: CMakeLists.txt  bisectioncompatibility.hh  estimate-closure.cc  test-compatibility.cc
utils/convert-macrogrid/: CMakeLists.txt  Makefile.am  dgfparser.hh  main.cc  partition.hh
(+707 files in other folders)
